Fixed gulp tasks

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "Mammogram Landing Page",
-    "name": "Mammogram Landing Page",
+    "short_name": "Lung Cancer Screen Landing Page",
+    "name": "Lung Cancer Screen Landing Page",
     "icons": [{
             "src": "favicon.ico",
             "sizes": "64x64 32x32 24x24 16x16",
@@ -17,7 +17,6 @@
             "sizes": "512x512"
         }
     ],
-    "start_url": ".",
     "display": "standalone",
     "theme_color": "#000000",
     "background_color": "#ffffff"
