--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
     "name": "comhs-lung-cancer-screen-landing-page",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://comhs.github.io/LungCancerScreen",
     "dependencies": {
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.3.0",
@@ -44,6 +43,7 @@
     "devDependencies": {
         "gulp": "^4.0.2",
         "gulp-dom": "^1.0.0",
+        "gulp-inline-css": "^4.0.0",
         "gulp-inline-source": "^4.0.0",
         "gulp-replace": "^1.1.3"
     }
