--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "start": "react-scripts start",
         "dev": "react-scripts start",
         "build": "react-scripts build",
-        "gulp": "react-scripts build && npx gulp",
+        "gulp": "npx gulp prebundle && react-scripts build && npx gulp",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
