--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "name": "comhs-lung-cancer-screen-landing-page",
-    "version": "0.1.0",
+    "version": "0.2.0",
     "private": true,
+    "homepage": "https://comhs.github.io/LungCancerScreen/",
     "dependencies": {
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.3.0",
